--- a/index.ipynb
+++ b/index.ipynb
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Moving Average model can be described as the weighted sum of today's and yesterday's noise.\n",
+    "**The Moving Average model can be described as the weighted sum of today's and yesterday's noise.**\n",
     "\n",
     "In words, the mathematical idea is the following:\n",
     "\n",
@@ -339,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
